--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Transaction Recorder v0-45</title>
+    <title>EBS Transaction Recorder v0-46</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -11,7 +11,7 @@
         body { font-family: -apple-system, sans-serif; background: var(--bg); margin: 0; padding: 10px; }
         .container { max-width: 950px; margin: auto; background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
         .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
-        .grid-3 { display: grid; grid-template-columns: 1fr 1fr 0.5fr; gap: 10px; }
+        .grid-3 { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; }
         .grid-date-type { display: grid; grid-template-columns: 0.7fr 0.3fr; gap: 10px; }
         .grid-4 { display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; gap: 8px; }
         label { font-size: 0.7rem; font-weight: 700; display: block; margin-bottom: 2px; }
@@ -44,7 +44,7 @@
 <body>
 
 <div class="container">
-    <h3>EBS Entry v0-45</h3>
+    <h3>EBS Entry v0-46</h3>
     <div id="auth_status">Bridge Status: Initializing...</div>
     
     <div class="grid">
@@ -55,15 +55,9 @@
         </div>
     </div>
 
-    <div class="grid-3" style="margin-top:10px;">
+    <div class="grid" style="margin-top:10px;">
         <div><label>F/U B</label><select id="colB" onchange="handleManualFU()"><option value="aj - ad-hoc">aj - ad-hoc</option><option value="aj - adjustment">aj - adjustment</option><option value="c - selected">c - selected</option><option value="F - fixed">F - fixed</option><option value="h - highlight">h - highlight</option><option value="I - income">I - income</option><option value="o - other">o - other</option><option value="p - Planned">p - Planned</option><option value="S - Support">S - Support</option><option value="u - unplanned">u - unplanned</option><option value="v" selected>v - variable</option><option value="xf - transfer">xf - transfer</option></select></div>
         <div><label>Category F</label><select id="colF" required><option value="" disabled selected>-- Select Category --</option><option value="Accessories">Accessories</option><option value="Accounting fee">Accounting fee</option><option value="Ad-hoc">Ad-hoc</option><option value="Adjustment">Adjustment</option><option value="Advertising">Advertising</option><option value="Arundel Str">Arundel Str</option><option value="Bank charges">Bank charges</option><option value="Budget repay">Budget repay</option><option value="Buffer">Buffer</option><option value="Car">Car</option><option value="Card payment">Card payment</option><option value="Cigarettes">Cigarettes</option><option value="Citroen car tax">Citroen car tax</option><option value="Citroen fuel">Citroen fuel</option><option value="Citroen insurance">Citroen insurance</option><option value="Citroen MoT">Citroen MoT</option><option value="Citroen other">Citroen other</option><option value="Citroen service">Citroen service</option><option value="Clothing">Clothing</option><option value="Computer accessories">Computer accessories</option><option value="Computer consumables">Computer consumables</option><option value="Computer hardware">Computer hardware</option><option value="Consulting fee">Consulting fee</option><option value="Consumables">Consumables</option><option value="Corporation tax">Corporation tax</option><option value="Cosmetics">Cosmetics</option><option value="Dawlish Court">Dawlish Court</option><option value="Debit orders">Debit orders</option><option value="Delivery costs">Delivery costs</option><option value="Dentist">Dentist</option><option value="Deposit">Deposit</option><option value="Director loan">Director loan</option><option value="Dividend">Dividend</option><option value="Eat out">Eat out</option><option value="Education">Education</option><option value="Electricity">Electricity</option><option value="Entertainment">Entertainment</option><option value="Expenses">Expenses</option><option value="Extra">Extra</option><option value="Fees">Fees</option><option value="FlexiPay payment">FlexiPay payment</option><option value="Food">Food</option><option value="Gifts">Gifts</option><option value="Groceries">Groceries</option><option value="Haircut">Haircut</option><option value="Hardware">Hardware</option><option value="Health">Health</option><option value="Home">Home</option><option value="Income">Income</option><option value="Insurance">Insurance</option><option value="Interest">Interest</option><option value="Internet">Internet</option><option value="Investment">Investment</option><option value="Jose motorbike">Jose motorbike</option><option value="Jose salary">Jose salary</option><option value="Land purchase">Land purchase</option><option value="Loan receive">Loan receive</option><option value="Loan interest">Loan interest</option><option value="Loan repay">Loan repay</option><option value="Luggage">Luggage</option><option value="Maid">Maid</option><option value="Miscellaneous">Miscellaneous</option><option value="Mobile">Mobile</option><option value="Mobile phone">Mobile phone</option><option value="Monthly">Monthly</option><option value="Music subs">Music subs</option><option value="NI">NI</option><option value="Office accessories">Office accessories</option><option value="Office equipment">Office equipment</option><option value="Office supplies">Office supplies</option><option value="Other">Other</option><option value="P tax">P tax</option><option value="Parking">Parking</option><option value="Personal tax">Personal tax</option><option value="Peter salary">Peter salary</option><option value="Phone accessories">Phone accessories</option><option value="Phone costs">Phone costs</option><option value="Portman Place">Portman Place</option><option value="Postage">Postage</option><option value="Refund">Refund</option><option value="Rent">Rent</option><option value="Roy">Roy</option><option value="Roy dividend">Roy dividend</option><option value="Roy salary">Roy salary</option><option value="Services">Services</option><option value="Shoes">Shoes</option><option value="Smoke">Smoke</option><option value="Software">Software</option><option value="Software subs">Software subs</option><option value="Storage">Storage</option><option value="Support">Support</option><option value="Support weekly">Support weekly</option><option value="Support monthly">Support monthly</option><option value="Support home">Support home</option><option value="Support rent">Support rent</option><option value="Support Samara">Support Samara</option><option value="Support unplanned">Support unplanned</option><option value="Sweets">Sweets</option><option value="Take-out food">Take-out food</option><option value="Taxi">Taxi</option><option value="Toiletries">Toiletries</option><option value="Transfer">Transfer</option><option value="Transport">Transport</option><option value="Travel">Travel</option><option value="Tut">Tut</option><option value="Unknown">Unknown</option><option value="VAT">VAT</option><option value="Visa">Visa</option><option value="Vitamins">Vitamins</option><option value="Water & Lights">Water & Lights</option><option value="Wine">Wine</option><option value="Wood cutting">Wood cutting</option></select></div>
-        <div><label>Mnth Z</label><select id="colZ">
-            <option value="25-11">25-11</option><option value="25-12">25-12</option>
-            <option value="26-01">26-01</option><option value="26-02">26-02</option><option value="26-03">26-03</option><option value="26-04">26-04</option><option value="26-05">26-05</option><option value="26-06">26-06</option><option value="26-07">26-07</option><option value="26-08">26-08</option><option value="26-09">26-09</option><option value="26-10">26-10</option><option value="26-11">26-11</option><option value="26-12">26-12</option>
-            <option value="27-01">27-01</option><option value="27-02">27-02</option>
-            <option value="NEW" selected>NEW</option>
-        </select></div>
     </div>
 
     <div class="grid" style="margin-top:10px;">
@@ -76,9 +70,15 @@
     </div>
 
     <div style="margin-top:10px;"><label>Note K</label><textarea id="colK" rows="2"></textarea></div>
-    <div class="grid" style="margin-top:10px;">
+    <div class="grid-3" style="margin-top:10px;">
         <div><label>Frequency F</label><select id="colFreq"><option value="u - Unplanned">u - Unplanned</option><option value="Q4 - Quarterly">Q4 - Quarterly</option><option value="K - Keep in credit">K - Keep in credit</option><option value="5 - 5-weekly">5 - 5-weekly</option><option value="Yr - Annual">Yr - Annual</option><option value="2Yr - 2 yearly">2Yr - 2 yearly</option><option value="M - Monthly">M - Monthly</option><option value="W - Weekly">W - Weekly</option><option value="Life - Lifetime">Life - Lifetime</option><option value="A - Ad-hoc" selected>A - Ad-hoc</option></select></div>
         <div><label>Status S</label><select id="colStatus"><option value="aa - archived">aa - archived</option><option value="aj - adjustment">aj - adjustment</option><option value="R - Review">R - Review</option><option value="V - Varies">V - Varies</option><option value="F - Fixed">F - Fixed</option><option value="N - Pending" selected>N - Pending</option><option value="P - Plan">P - Plan</option><option value="O - Open">O - Open</option><option value="n/a - n/a">n/a - n/a</option><option value="C - Cancelled">C - Cancelled</option><option value="A - Actual">A - Actual</option></select></div>
+        <div><label>Mnth Z</label><select id="colZ">
+            <option value="25-11">25-11</option><option value="25-12">25-12</option>
+            <option value="26-01">26-01</option><option value="26-02">26-02</option><option value="26-03">26-03</option><option value="26-04">26-04</option><option value="26-05">26-05</option><option value="26-06">26-06</option><option value="26-07">26-07</option><option value="26-08">26-08</option><option value="26-09">26-09</option><option value="26-10">26-10</option><option value="26-11">26-11</option><option value="26-12">26-12</option>
+            <option value="27-01">27-01</option><option value="27-02">27-02</option>
+            <option value="NEW" selected>NEW</option>
+        </select></div>
     </div>
     <div class="grid-4" style="margin-top:10px">
         <div><label>Each T</label><input type="number" id="colT" placeholder="0.00" step="0.01" oninput="calc()"></div>
@@ -102,9 +102,78 @@
 <script>
     const AA_LIST = ["Bank Austria", "Cashplus B", "Cashplus P", "Cash ZAR", "FlexiPay", "Fluid MC", "FNB Budget", "FNB Smart", "FNB Visa", "Kraken B", "Kraken P", "mobicred", "PayPal B", "Paysend", "RBoS MC", "RBoS P", "Revolut B", "Revolut P", "Santander B", "Santander MC", "Santander P", "Starling B", "Starling P", "Std Bank", "Std Peter", "TFG Money", "Tyme Bank Roy", "Tyme Bank Peter"];
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "EBS Entry v0-45";
+    const VER = "EBS Entry v0-46";
     const symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
 
     function gapiLoaded() { gapi.load('client', async () => { try { await gapi.client.init({ apiKey: 'AIzaSyDvZ1XZw5bZgWSB9zaU7h9Vtn7MhDGFMSM' }); await gapi.client.load('sheets', 'v4'); gapiInited = true; checkReady(); } catch (e) {} }); }
-    function gisLoaded() { tokenClient = google.accounts.oauth2.initTokenClient({ client_id: '23231735212-jtgur3sn2ndh798ke00pm2a1
+    function gisLoaded() { tokenClient = google.accounts.oauth2.initTokenClient({ client_id: '23231735212-jtgur3sn2ndh798ke00pm2a1d5rkd4eu.apps.googleusercontent.com', scope: 'https://www.googleapis.com/auth/spreadsheets', callback: '' }); gsiInited = true; checkReady(); }
+    function checkReady() { if (gapiInited && gsiInited) { document.getElementById('auth_status').innerText = "Bridge Status: Active and Ready"; document.getElementById('sync_btn').disabled = false; } }
+
+    function calcType() {
+        const h = document.getElementById('colH').value, i = document.getElementById('colI').value;
+        const bgE = document.getElementById('bgTypeE'), workE = document.getElementById('workTypeDisplay');
+        if (!h || !i) { bgE.value = "--"; workE.innerText = "--"; return; }
+        const fAA = AA_LIST.includes(h), tAA = AA_LIST.includes(i);
+        let valE = "zOut";
+        if (fAA && tAA) valE = "xfer"; else if (!fAA && tAA) valE = "In";
+        bgE.value = valE; workE.innerText = valE;
+        if (valE === "xfer") { document.getElementById('colB').value = "xf - transfer"; document.getElementById('colF').value = "Transfer"; }
+    }
+
+    function handleManualFU() { if(document.getElementById('colB').value === 'xf - transfer') document.getElementById('colF').value = "Transfer"; }
+    function handleDateChange() {
+        const d = new Date(document.getElementById('colC').value);
+        document.getElementById('colCDisp').innerText = `${['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][d.getDay()]} ${d.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][d.getMonth()]} '${String(d.getFullYear()).substr(-2)}`;
+    }
+
+    window.onload = () => { 
+        document.getElementById('colC').value = new Date().toISOString().split('T')[0]; 
+        document.getElementById('colStatus').value = "N - Pending"; 
+        document.getElementById('colZ').value = "NEW"; 
+        handleDateChange(); gapiLoaded(); gisLoaded(); 
+    };
+
+    function calc() {
+        const t = parseFloat(document.getElementById('colT').value) || 0, u = parseFloat(document.getElementById('colM').value) || 1, v = parseFloat(document.getElementById('colV').value) || 0;
+        const tot = ((t * u) + v).toFixed(2);
+        document.getElementById('symbol').innerText = symbols[document.getElementById('colX').value] || "";
+        document.getElementById('totalDisp').innerText = tot;
+        return tot;
+    }
+
+    function saveRow() {
+        if (document.getElementById('bgTypeE').value === "--") return alert("Error: Select From and To accounts.");
+        const row = [document.getElementById('colA').value, document.getElementById('colB').value.split(' - ')[0], document.getElementById('colC').value, "", document.getElementById('bgTypeE').value, document.getElementById('colF').value, "", document.getElementById('colH').value, document.getElementById('colI').value, "", document.getElementById('colK').value, document.getElementById('colFreq').value.split(' - ')[0], "", "", document.getElementById('colStatus').value.split(' - ')[0], "", "", "", "", parseFloat(document.getElementById('colT').value || 0).toFixed(2), document.getElementById('colM').value, parseFloat(document.getElementById('colV').value || 0).toFixed(2), calc(), document.getElementById('colX').value, "", document.getElementById('colZ').value, VER];
+        let data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); data.push(row); localStorage.setItem('ebs_trf', JSON.stringify(data));
+        ['colT', 'colV', 'colK'].forEach(id => document.getElementById(id).value = ""); renderPreview();
+    }
+
+    function renderPreview() {
+        const data = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
+        let html = '<table><tr><th class="w-fu">F/U</th><th class="w-date">Date</th><th class="w-type">Type</th><th class="w-cat">Cat</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-tiny">N</th><th class="w-tiny">F</th><th class="w-tiny">S</th><th class="w-cur">Cur</th><th class="w-tot">Total</th><th class="w-mnth">Mnth</th><th class="w-del"></th></tr>';
+        data.forEach((r, idx) => {
+            const d = new Date(r[2]);
+            const dS = `${['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][d.getDay()]} ${d.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][d.getMonth()]} '${String(d.getFullYear()).substr(-2)}`;
+            html += `<tr><td>${r[1]}</td><td>${dS}</td><td>${r[4]}</td><td>${r[5]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-tiny">${r[10]?"✓":""}</td><td class="w-tiny">${r[11]}</td><td class="w-tiny">${r[14]}</td><td>${r[23]}</td><td class="w-tot">${r[22]}</td><td>${r[25]}</td><td class="w-del"><button onclick="deleteRow(${idx})" style="background:red;padding:2px 5px;border:none;color:white;">X</button></td></tr>`;
+        });
+        document.getElementById('previewArea').innerHTML = html + '</table>';
+    }
+
+    async function handleSync() {
+        const data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (!data.length) return;
+        tokenClient.callback = async (resp) => {
+            const vals = data.map(r => { let rc = [...r]; const d = new Date(rc[2]); rc[2] = `'${d.getDate().toString().padStart(2,'0')}/${(d.getMonth()+1).toString().padStart(2,'0')}/${d.getFullYear()}`; [19, 21, 22].forEach(i => rc[i] = `'${rc[i]}`); return rc.slice(0, 27); });
+            try { await gapi.client.sheets.spreadsheets.values.append({ spreadsheetId: SHEET_ID, range: 'Sheet1', valueInputOption: 'USER_ENTERED', resource: { values: vals } }); alert("Success! Appended to Sheet1."); renderPreview(); } catch (e) { alert("Sync Error."); }
+        };
+        tokenClient.requestAccessToken({prompt: gapi.client.getToken() === null ? 'consent' : ''});
+    }
+
+    function deleteRow(i) { let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); d.splice(i, 1); localStorage.setItem('ebs_trf', JSON.stringify(d)); renderPreview(); }
+    function clearData() { if(!wipeConfirmed) { wipeConfirmed=true; document.getElementById('wipeBtn').classList.add('active'); setTimeout(()=>{wipeConfirmed=false; document.getElementById('wipeBtn').classList.remove('active');},3000); } else { localStorage.removeItem('ebs_trf'); wipeConfirmed=false; renderPreview(); } }
+    renderPreview();
+</script>
+<script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
+<script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+</body>
+</html>
